# web-scout

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  README_EN.md  TODO.md  pyproject.toml
specs/: 000-scout-open-split.md  001-scroll-granularity.md  002-text-extraction.md  003-tool-docstrings.md  004-batch-export.md  005-text-timing.md  006-content-type-listener.md  007-ssr-embedded-json.md  008-export-state-loss.md  009-scroll-verification.md  010-resource-type-filter.md  011-response-truncation.md  012-multi-browser.md  013-screenshot.md  014-dom-scan-speed.md  015-nested-dom-scan.md  016-redirect-detail.md  017-resource-type-labels.md  018-tab-management.md  ROADMAP.md  browser.md  dom.md  export.md  login.md  monitor.md  server.md  verify.md
src/web_scout/: __init__.py  browser.py  dom.py  export.py  login.py  monitor.py  server.py  state.py
src/web_scout/tools/: act.py  discover.py  navigate.py  observe.py  scan.py
